<resources>
    <string name="app_name">Backyard Sports Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="groupings">Groupings</string>
    <string name="games">Games</string>
    <string name="players">Players</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="about_description">An app for tracking backyard sports.</string>
    <string name="about_credits">App icon made by &lt;a href=https://www.flaticon.com/authors/gregor-cresnar>Gregor Cresnar&lt;/a> from &lt;a href=https://www.flaticon.com/free-icon/line-chart_126425>www.flaticon.com&lt;/a> and is licensed by &lt;a href=http://creativecommons.org/licenses/by/3.0>CC 3.0 BY&lt;/a>&lt;br/>Sports icons made by &lt;a href=https://www.freepik.com>Freepik&lt;/a> from &lt;a href=https://www.flaticon.com/packs/sports-set>www.flaticon.com&lt;/a>&lt;br/>Spikeball icon from &lt;a href=https://www.iconpacks.net/free-icon/volleyball-1826.html>www.iconpacks.net&lt;/a></string>
    <string name="action_settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="submit">Submit</string>
    <string name="nameLabel">Name:</string>
    <string name="name">Name</string>
    <string name="ratingsTitle">Ratings:</string>
    <string name="winLossFormat">%1$d W / %2$d L</string>
    <string name="winLossTieFormat">%1$d W / %2$d L / %3$d T</string>
    <string name="pointsTitle">Points (all games):</string>
    <string name="pointsForFormat">For: %1$d</string>
    <string name="pointsAgainstFormat">Against: %1$d</string>
    <string name="pointsRecordFormat">%1$d-%2$d</string>
    <string name="teamStrengthFormat">%1$.3f</string>
    <string name="nameAndPointsFormat">%1$s (%2$d-%3$d)</string>
    <string name="teammatesTitle">Played with:</string>
    <string name="teammatesDescription">Points for-against in games on the same team (all sports).</string>
    <string name="noTeammates">No teammates yet.</string>
    <string name="addSport">Add Sport</string>
    <string name="cancel">Cancel</string>
    <string name="sportLabel">Sport:</string>
    <string name="ratingLabel">Rating:</string>
    <string name="add">Add</string>
    <string name="clearRatings">Clear Ratings</string>
    <string name="addPlayers">Add Players</string>
    <string name="selectPlayers">Select players</string>
    <string name="addSelectedPlayers">Add selected</string>
    <string name="newGrouping">New Grouping</string>
    <string name="editGrouping">Edit Grouping</string>
    <string name="groupingUnavailable">This grouping is no longer available.</string>
    <string name="groupingNameFormat">"%s (%d) vs. %s (%d)"</string>
    <string name="team2Title">Team 2</string>
    <string name="team1Title">Team 1</string>
    <string name="clearTeam">Clear Team</string>
    <string name="nameAndRatingFormat">%s - %.2f</string>
    <string name="basketball">Basketball</string>
    <string name="ultimate">Ultimate</string>
    <string name="deleteButton">Delete Button</string>
    <string name="sportFormat">Sport: %s</string>
    <string name="newGame">New Game</string>
    <string name="editGame">Edit Game</string>
    <string name="gameUnavailable">This game is no longer available.</string>
    <string name="invalidScore">Enter non-negative scores with at least one point.</string>
    <string name="scoreFormat">%d - %d</string>
    <string name="scoreLabel">Score:</string>
    <string name="clearDatabase">Clear Database</string>
    <string name="exportData">Export Data</string>
    <string name="importData">Import Data</string>
    <string name="importConfirmationMessage">Importing this backup replaces all current players, games, and groupings.</string>
    <string name="exportComplete">Backup exported.</string>
    <string name="importComplete">Backup imported.</string>
    <string name="backupFailed">Could not read or write the backup file.</string>
    <string name="setSport">Set Sport</string>
    <string name="teamRatingAndChanceFormat">%.2f (%.2f%%)</string>
    <string name="createGame">Create Game</string>
    <string name="allSports">All Sports</string>
    <string name="all">All</string>
    <string name="twoDecimalFormat">%.2f</string>
    <string name="expectedScoreFormat">%.2f pts</string>
    <string name="gameDateFormat">M/d/y h:mm a</string>
    <string name="gamesTitle">Games:</string>
    <string name="won">Won</string>
    <string name="tie">Tie</string>
    <string name="lost">Lost</string>
    <string name="spikeball">Spikeball</string>
</resources>
