<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SettingsFragment">

    <Button
        android:id="@+id/exportData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exportData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/importData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/importData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exportData" />

    <Button
        android:id="@+id/clearDatabase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearDatabase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/importData" />
</android.support.constraint.ConstraintLayout>
