<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewGameActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/newGame" />

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/sportLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sportLabel"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/sportChoices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintStart_toEndOf="@+id/sportLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/scoreLabel"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sportLabel" />

        <EditText
            android:id="@+id/team1Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            app:layout_constraintBaseline_toBaselineOf="@+id/scoreLabel"
            app:layout_constraintStart_toEndOf="@id/scoreLabel" />

        <TextView
            android:id="@+id/scoreSeparator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            app:layout_constraintBaseline_toBaselineOf="@+id/scoreLabel"
            app:layout_constraintStart_toEndOf="@id/team1Score" />

        <EditText
            android:id="@+id/team2Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            app:layout_constraintBaseline_toBaselineOf="@+id/scoreLabel"
            app:layout_constraintStart_toEndOf="@id/scoreSeparator" />

        <android.support.constraint.Guideline
            android:id="@+id/middleGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/team1Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/team1Title"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/middleGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scoreLabel" />

        <TextView
            android:id="@+id/team2Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/team2Title"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/middleGuideline"
            app:layout_constraintTop_toBottomOf="@+id/scoreLabel" />


        <TextView
            android:id="@+id/team1Rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/middleGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/team1Title" />

        <TextView
            android:id="@+id/team2Rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/middleGuideline"
            app:layout_constraintTop_toBottomOf="@+id/team2Title" />

        <LinearLayout
            android:id="@+id/team1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/middleGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/team1Rating" />

        <LinearLayout
            android:id="@+id/team2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/middleGuideline"
            app:layout_constraintTop_toBottomOf="@+id/team2Rating" />

        <Button
            android:id="@+id/addPlayerTeam1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onAddPlayerClick"
            android:text="@string/addPlayers"
            app:layout_constraintEnd_toStartOf="@+id/middleGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/team1" />

        <Button
            android:id="@+id/addPlayerTeam2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onAddPlayerClick"
            android:text="@string/addPlayers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/middleGuideline"
            app:layout_constraintTop_toBottomOf="@+id/team2" />
    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>
